--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -38,7 +38,7 @@
         dest: "/tmp/{{ bundle.name }}.zip"
         owner: "root"
         group: "root"
-        mode: 0700
+        mode: "0700"
 
     - name: "Import cryptographic content if needed (CA)"
       loop: "{{ inv_cert_bundles }}"
@@ -50,7 +50,7 @@
         dest: "/tmp/{{ bundle.name }}"
         owner: "root"
         group: "root"
-        mode: 0700
+        mode: "0700"
 
     - name: "Include labocbz.add_certificates"
       tags:
