--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -29,5 +29,6 @@
         install_docker__clean_minute: "{{ inv_install_docker__clean_minute }}"
         install_docker__clean_hour: "{{ inv_install_docker__clean_hour }}"
         install_docker__disable_swap: "{{ inv_install_docker__disable_swap }}"
+        install_docker__custom_lib_path: "{{ inv_install_docker__custom_lib_path }}"
       ansible.builtin.include_role:
         name: "labocbz.install_docker"
