--- a/tests/inventory/group_vars/all.yml
+++ b/tests/inventory/group_vars/all.yml
@@ -2,6 +2,7 @@
 inv_install_docker__compose_version: "2.17.2"
 
 inv_install_docker__disable_swap: true
+inv_install_docker__custom_lib_path: /var/lib/docker
 
 #inv_install_docker__insecure_registries:
 #  - http://your.personnal.registrie:5049
